// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all props 1`] = `
<dl
  className="govuk-summary-list lbh-summary-list class1 class2"
  id="test"
>
  <div
    className="govuk-summary-list__row lbh-summary-list__row"
  >
    <dt
      className="govuk-summary-list__key lbh-summary-list__key"
    >
      TestKey
    </dt>
    <dd
      className="govuk-summary-list__value lbh-summary-list__value"
    >
      TestValue
    </dd>
  </div>
  <div
    className="govuk-summary-list__row lbh-summary-list__row"
  >
    <dt
      className="govuk-summary-list__key lbh-summary-list__key"
    >
      TestKey2
    </dt>
    <dd
      className="govuk-summary-list__value lbh-summary-list__value"
    >
      TestValue2
    </dd>
  </div>
</dl>
`;

exports[`renders correctly with an empty array of rows 1`] = `
<dl
  className="govuk-summary-list lbh-summary-list"
/>
`;

exports[`renders correctly without optional props 1`] = `
<dl
  className="govuk-summary-list lbh-summary-list"
>
  <div
    className="govuk-summary-list__row lbh-summary-list__row"
  >
    <dt
      className="govuk-summary-list__key lbh-summary-list__key"
    >
      TestKey
    </dt>
    <dd
      className="govuk-summary-list__value lbh-summary-list__value"
    >
      TestValue
    </dd>
  </div>
</dl>
`;
